--- a/projeto/app/src/main/res/values/strings.xml
+++ b/projeto/app/src/main/res/values/strings.xml
@@ -1,3 +1,11 @@
 <resources>
     <string name="app_name">Globo</string>
+
+    <string name="main_activity_toolbar_title">O GLOBO</string>
+
+    <string name="label_news_by">POR</string>
+    <string name="label_picture">FOTO</string>
+    <string name="label_no_posts_found">Nenhum post encontrado, \ntenta novamente mais tarde.</string>
+    <string name="label_internet_posts_found">Não foi possivel estebelecer conexão com a internet.\nTenta novamente mais tarde.</string>
+
 </resources>
