--- a/projeto/app/src/main/res/values/strings.xml
+++ b/projeto/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="label_news_by">POR</string>
     <string name="label_picture">FOTO</string>
+    <string name="text_share">Compartilhar...</string>
     <string name="label_no_posts_found">Nenhum post encontrado, \ntenta novamente mais tarde.</string>
     <string name="label_internet_posts_found">Não foi possivel estebelecer conexão com a internet.\nTenta novamente mais tarde.</string>
 
